[package]
name = "kvs"
version = "0.1.0"
authors = ["pjpatel <parthik.j.patel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde_json = "1.0.62"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.8"
log = "0.4.14"
simplelog = "0.9.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"